// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Component Popover renders 1`] = `
<body>
  <div>
    <div />
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute;"
          />
          <div
            class="gds-popover-container"
          >
            CONTENT
          </div>
        </ul>
      </div>
    </div>
    ,
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;

exports[`Popover Component Popover renders 2`] = `
<body>
  <div>
    <div />
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute; left: 0px;"
          />
          <div
            class="gds-popover-container"
          >
            CONTENT
          </div>
        </ul>
      </div>
    </div>
    ,
  </div>
  <div
    id="root-portal-id"
  >
    <div />
  </div>
</body>
`;
